@@ -1,3 +1,11 @@
+2009-02-10 Maximilien Cuony
+    * FS#246
+    * FS#240
+    
+2009-02-09 Maximilien Cuony
+    * Fix problem with inline decryption
+    * Fixed some problem with compose buttons
+
 2009-02-08 Maximilien Cuony
     * 0.7.3 packed, and uploaded to the server !
     * Small bugs fixed
